--- a/appeal.html
+++ b/appeal.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!--logo-->
-<link rel="icon" type="image/png" sizes="300x250" href="https://mm2playz.secretguard.xyz/img/mm2playz.jpg">
+<link rel="icon" type="image/png" sizes="300x250" href="https://mm2playz.secretguard.xyz/img/logo.png">
+    <meta property="og:image" content="https://mm2playz.secretguard.xyz/img/mm2playz.jpg">
 <!-- Primary Meta Tags -->
 <meta name="title" content="mm2playz - ban appeal">
 <meta name="description" content="discord.gg/mm2playz">
