--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
 </svg>
 <div class="message-box">
   <h1>404</h1>
-  <p>Page not found</p>
+  <p>Page removed</p>
   <div class="buttons-con">
     <div class="action-link-wrap">
     </div>
