--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<!--logo-->
+<link rel="icon" type="image/png" sizes="300x250" href="https://mm2playz.secretguard.xyz/img/logo.png">
+    <meta property="og:image" content="https://mm2playz.secretguard.xyz/img/mm2playz.jpg">
+<!-- Primary Meta Tags -->
+<meta name="title" content="mm2playz - ban appeal">
+<meta name="description" content="Page has been removed
+">
+
 <center> <title> 404  </title>
   <center> <h1> 404 page not found </h1> </center>
   <center> <h2> page will be deleted soon </h2> </center>
