--- a/index.html
+++ b/index.html
@@ -8,5 +8,4 @@
 
 <center> <title> 404  </title>
   <center> <h1> 404 page not found </h1> </center>
-  <center> <h2> page will be deleted soon </h2> </center>
-  <center> <h4> page will not come back stay mad lol </h4> </center>
+  <center> <h2> page will be back up soon </h2> </center>
