--- a/index.html
+++ b/index.html
@@ -9,3 +9,4 @@
 <center> <title> 404  </title>
   <center> <h1> 404 page not found </h1> </center>
   <center> <h2> page will be back up soon </h2> </center>
+    <center> <a href="https://mm2playz.secretguard.xyz/appeal">ban appeal</a> </center>
