--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta property="og:image" content="https://mm2playz.secretguard.xyz/img/mm2playz.jpg">
 <!-- Primary Meta Tags -->
 <meta name="title" content="mm2playz - ban appeal">
-<meta name="description" content="Page has been removed
+<meta name="description" content="Home
 ">
 
 <center> <title> 404  </title>
