--- a/index.html
+++ b/index.html
@@ -10,4 +10,4 @@
   <center> <h1> 404 page not done </h1> </center>
   <center> <h2> page will be back up soon </h2> </center>
     <center> <a href="https://mm2playz.secretguard.xyz/appeal">ban appeal</a> </center>
-    <center> <a href="https://discord.gg/mm2playz'>Official Discord Server</a> </center>
+    <center> <a href="https://discord.gg/mm2playz">Official Discord Server</a> </center>
