--- a/index.html
+++ b/index.html
@@ -11,3 +11,11 @@
   <center> <h2> page will be back up soon </h2> </center>
     <center> <a href="https://mm2playz.secretguard.xyz/appeal">ban appeal</a> </center>
     <center> <a href="https://discord.gg/mm2playz">Official Discord Server</a> </center>
+<style>
+body {
+  background-image: url('https://cdn.discordapp.com/splashes/810029780242006026/4d27b517624a51bf46eeb8ce48d90330.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed; 
+  background-size: 100% 100%;
+}
+</style>
