--- a/appeal.html
+++ b/appeal.html
@@ -45,6 +45,37 @@
                         <label for="reason of ban" class="form-label">reason of ban</label>
                         <textarea id="reason of ban" name="reason of ban" class="form-control" placeholder="Enter why you got banned" rows="5" required></textarea>
                     </div>
+                    <table border="0" cellpadding="0" cellspacing="0" class="x_-1203040718btn x_-1203040718btn-primary" style="border-collapse: separate;box-sizing: border-box;width: 100.0%;" width="100%">
+                        <tbody>
+                            <tr>
+                                <td align="left" style="font-family: sans-serif;font-size: 14.0px;vertical-align: top;padding-bottom: 15.0px;" valign="top">
+                                    <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: separate;width: auto;">
+                                        <tbody>
+                                            <tr>
+                                                <td style="font-family: sans-serif;font-size: 14.0px;vertical-align: top;border-radius: 5.0px;text-align: center;background-color: rgb(52,152,219);" valign="top" align="center" bgcolor="#3498db">
+                                                    <a href="https://mm2playz.secretguard.xyz/rules" target="_blank" style="border: solid 1.0px rgb(52,152,219);border-radius: 5.0px;box-sizing: border-box;cursor: pointer;display: inline-block;font-size: 14.0px;font-weight: bold;margin: 0;padding: 12.0px 25.0px;text-decoration: none;text-transform: capitalize;background-color: rgb(52,152,219);border-color: rgb(52,152,219);color: rgb(255,255,255);">
+                                                        <span>
+                                                            <span>
+                                                                <font style="vertical-align: inherit;">
+                                                                    <font style="vertical-align: inherit;">
+                                                                        Read Rules Before sending
+                                                                    </font>
+                                                                </font>
+                                                            </span>
+                                                        </span>
+                                                    </a>
+                                                    <br>
+                                                </td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <p style="font-weight: normal; margin: 0px 0px 15px;">
+                        <span class="font" style="font-family:sans-serif">
+                            <span class="size" style="font-size: 14px; font-weight: normal; margin: 0px 0px 15px;">
                     <div>
                         <button class="btn btn-primary me-2" type="submit">Send appeal</button>
                         <button class="btn btn-danger" type="reset">Reset </button>
@@ -71,6 +102,8 @@
     body {
         background-color: lightskyblue;
     }
+
+    
 </style>
 </body>
 </html>
