--- a/appeal.html
+++ b/appeal.html
@@ -100,7 +100,7 @@
     </script>
 <style>
     body {
-        background-color: lightskyblue;
+        background-color: lightsteelblue;
     }
 
     
