--- a/rules.html
+++ b/rules.html
@@ -407,11 +407,11 @@
               <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                 <tr>
                   <td class="content-block">
-                    <span class="apple-link">MM2Playz Ban appeal. By Secretguard
+                    <span class="apple-link">MM2Playz Ban appeal. By JokeOnCoke
                 </tr>
                 <tr>
                   <td class="content-block powered-by">
-                    Powered by <a href="http://https://secretguard.xyz">Secretguard</a>.
+                    Powered by <a href="https://secretguard.xyz">Secretguard</a>.
                   </td>
                 </tr>
               </table>
